--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="title_activity_signup">SignupActivity</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="facebook_app_id">102779983691627</string>
+    <string name="fb_login_protocol_scheme">fb102779983691627</string>
+    <string name="title_activity_user_info">UserInfo</string>
 </resources>
